--- a/custom_theme_technolibre/static/src/scss/footer.scss
+++ b/custom_theme_technolibre/static/src/scss/footer.scss
@@ -1,5 +1,5 @@
 #footer-tl {
-    background: var(--tl-dark-blue) !important;
+    background: theme-color('menu') !important;
     padding: 4rem 0 3rem 0;
     color: white;
     position: relative;
