--- a/custom_theme_technolibre/static/src/scss/primary_variables.scss
+++ b/custom_theme_technolibre/static/src/scss/primary_variables.scss
@@ -51,7 +51,7 @@ $o-user-theme-color-palette: () !default;
 //------------------------------------------------------------------------------
 
 $o-theme-fonts: (
-    (-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Noto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"), // This is BS default
+    ('Apercu', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Noto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"), // This is BS default
     ('Open Sans', sans-serif),
     ('Source Sans Pro', sans-serif),
     ('Raleway', sans-serif),
