--- a/custom_theme_technolibre/views/custom_theme_technolibre_templates.xml
+++ b/custom_theme_technolibre/views/custom_theme_technolibre_templates.xml
@@ -4,6 +4,9 @@
     <xpath expr="//link[last()]" position="after">
       <link rel="stylesheet" type="text/scss" href="/custom_theme_technolibre/static/src/scss/_variables.scss"/>
       <link rel="stylesheet" type="text/scss" href="/custom_theme_technolibre/static/src/scss/custom.scss"/>
+      <link rel="stylesheet" type="text/scss" href="/custom_theme_technolibre/static/src/scss/button.scss"/>
+      <link rel="stylesheet" type="text/scss" href="/custom_theme_technolibre/static/src/scss/navbar.scss"/>
+      <link rel="stylesheet" type="text/scss" href="/custom_theme_technolibre/static/src/scss/footer.scss"/>
     </xpath>
   </template>
   <template id="custom_theme_technolibre_var" inherit_id="website._assets_primary_variables">
