--- a/custom_theme_technolibre/static/src/scss/primary_variables.scss
+++ b/custom_theme_technolibre/static/src/scss/primary_variables.scss
@@ -15,7 +15,7 @@ $-palettes: ();
         'text': #212529,
         'alpha': #ffd166,
         'beta': #EBEBEB,
-        'gamma': #A57400,
+        'gamma': #7b5600,
         'delta': #2D4E60,
         'epsilon': #20506C,
         'h1': null, // Default to text
