--- a/custom_theme_technolibre/static/src/scss/button.scss
+++ b/custom_theme_technolibre/static/src/scss/button.scss
@@ -1,6 +1,8 @@
 .btn-sq {
-    font-family: inherit !important;
-    white-space: nowrap;
-    font-weight: 600;
-    border-radius: 0;
+  font-family: "Apercu", sans-serif !important;
+  white-space: nowrap;
+  font-weight: 600;
+  border-radius: 0;
+  text-transform: capitalize !important;
+  padding: 0.75rem 1.5rem;
 }
